unpackaged/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Task Planner</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Planner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>