unpackaged/main/default/objects/Project__c/fields/Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Acceptance__c</fullName>
    <label>Acceptance Criteria</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>