unpackaged/main/default/objects/Project__c/fields/Acceptance_CriteriaRT__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_CriteriaRT__c</fullName>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>