unpackaged/main/default/objects/Project__c/fields/BRD_Approved__c.field-meta.xml
<CustomField>
    <fullName>BRD_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRD Approved</label>
    <type>Checkbox</type>
</CustomField>