unpackaged/main/default/objects/Project__c/fields/BRD_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BRD_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRD Submitted</label>
    <type>Checkbox</type>
</CustomField>