unpackaged/main/default/objects/Project__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>