unpackaged/main/default/objects/Project__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <summarizedField>Project_Time_Sheet__c.Hours__c</summarizedField>
    <summaryForeignKey>Project_Time_Sheet__c.Project_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>