unpackaged/main/default/objects/Project__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Sub-task</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Improvement</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
                <isActive>false</isActive>
                <label>Epic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>