unpackaged/main/default/objects/Project__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <displayFormat>FSL-{0000}</displayFormat>
    <label>Task Id</label>
    <type>AutoNumber</type>
</CustomField>