unpackaged/main/default/objects/Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Document Refinement</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Ready For Work</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Code Review</fullName>
            </value>
            <value>
                <fullName>In Testing / QA</fullName>
            </value>
            <value>
                <fullName>Dev Done</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Ready for Release</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>