unpackaged/main/default/objects/Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billflex</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
                <label>Integration/API</label>
            </value>
            <value>
                <fullName>FSL</fullName>
            </value>
            <value>
                <fullName>JasperSoft</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
                <isActive>false</isActive>
                <label>Continuous Improvement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>