unpackaged/main/default/objects/Project__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>99</fullName>
                <isActive>false</isActive>
                <label>99</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>