unpackaged/main/default/objects/Project__c/fields/Release_Date_Delete__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_Delete__c</fullName>
    <label>Release_Date_Delete</label>
    <type>Date</type>
</CustomField>