unpackaged/main/default/objects/Project__c/fields/Sponsor_delete__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_delete__c</fullName>
    <label>Sponsor_delete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Christina Lees</fullName>
            </value>
            <value>
                <fullName>Diane Percy</fullName>
            </value>
            <value>
                <fullName>Jason Valliere</fullName>
            </value>
            <value>
                <fullName>Donovan Blake</fullName>
            </value>
            <value>
                <fullName>Lindsay Williams</fullName>
            </value>
            <value>
                <fullName>Victor Lau</fullName>
            </value>
            <value>
                <fullName>Bernard Mathews</fullName>
            </value>
            <value>
                <fullName>Samir Shrestha</fullName>
                <isActive>false</isActive>
                <label>Samir Shrestha</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>