unpackaged/main/default/objects/Project__c/fields/Sprint_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Cycle_Date__c</fullName>
    <label>Sprint Cycle Date</label>
    <type>Date</type>
</CustomField>