unpackaged/main/default/objects/Project__c/fields/Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Status_Color__c</fullName>
    <formula>IF(
ISPICKVAL(RAG_Status__c, &quot;Green&quot;),
IMAGE(&quot;/resource/GreenDot&quot;, &quot;GreenDot&quot;, 24, 24),
IF(
ISPICKVAL(RAG_Status__c, &quot;RED&quot;),
IMAGE(&quot;/resource/RedDot&quot;, &quot;RedDot&quot;, 24, 24),
IF(
ISPICKVAL(RAG_Status__c, &quot;Amber&quot;),
IMAGE(&quot;/resource/YellowDot&quot;, &quot;YellowDot&quot;, 24, 24),
null
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Color</label>
    <type>Text</type>
</CustomField>