unpackaged/main/default/objects/Project__c/fields/Sub_Task__c.field-meta.xml
<CustomField>
    <fullName>Sub_Task__c</fullName>
    <label>Sub Task</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billflex Overlap</fullName>
            </value>
            <value>
                <fullName>Time backdating</fullName>
            </value>
            <value>
                <fullName>FS Mobile</fullName>
            </value>
            <value>
                <fullName>LOC Support</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>