unpackaged/main/default/objects/Project__c/fields/Task_DescriptionRT__c.field-meta.xml
<CustomField>
    <fullName>Task_DescriptionRT__c</fullName>
    <label>Task Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>