unpackaged/main/default/objects/Project__c/fields/Total_Estimated_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Working_Hours__c</fullName>
    <label>Total Estimated Working Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>