unpackaged/main/default/objects/Project__c/fields/Total_Worked_Hour__c.field-meta.xml
<CustomField>
    <fullName>Total_Worked_Hour__c</fullName>
    <formula>IF(
    Is_Parent__c,
    Hours_Worked__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Worked Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>