unpackaged/main/default/objects/Project__c/fields/Total_Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Worked_Hours__c</fullName>
    <label>Total Worked Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>