unpackaged/main/default/objects/Project__c/recordTypes/Case_Support.recordType-meta.xml
<RecordType>
    <fullName>Case_Support</fullName>
    <active>true</active>
    <label>Case Support</label>
</RecordType>