unpackaged/main/default/objects/Project__c/listViews/Active_Tasks.listView-meta.xml
<ListView>
    <fullName>Active_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Parent_Project__c</columns>
    <columns>Assignee__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Status_Color__c</columns>
    <columns>Sponsor__c</columns>
    <columns>Is_Parent__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Project</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Launched</value>
    </filters>
    <label>Active Tasks</label>
</ListView>