unpackaged/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hours_Worked__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Sponsor__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Number__c</columns>
    <columns>Assignee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Backlog,Ready for Release</value>
    </filters>
    <label>All</label>
</ListView>