unpackaged/main/default/objects/Project__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Sponsor__c</columns>
    <columns>Sponsor_delete__c</columns>
    <columns>Release__c</columns>
    <columns>Release_Date_Delete__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Assignee__c</columns>
    <columns>Project_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>