unpackaged/main/default/objects/Project__c/listViews/All_Current_Month.listView-meta.xml
<ListView>
    <fullName>All_Current_Month</fullName>
    <columns>NAME</columns>
    <columns>Hours_Worked__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Sponsor_delete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Project</value>
    </filters>
    <label>All Current Month</label>
</ListView>