unpackaged/main/default/objects/Project__c/listViews/All_Subtasks.listView-meta.xml
<ListView>
    <fullName>All_Subtasks</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Issue_Type__c</columns>
    <columns>Is_Parent__c</columns>
    <columns>IsChild__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Parent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Subtasks</label>
</ListView>