unpackaged/main/default/objects/Project__c/listViews/Backlog.listView-meta.xml
<ListView>
    <fullName>Backlog</fullName>
    <columns>NAME</columns>
    <columns>Parent_Project__c</columns>
    <columns>Priority__c</columns>
    <columns>Rank__c</columns>
    <columns>Sponsor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Due_Date__c</columns>
    <columns>Project_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Backlog</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Launched,Closed,Archive</value>
    </filters>
    <label>Product Backlog</label>
</ListView>