unpackaged/main/default/objects/Project__c/listViews/MTD_Support_Buckets.listView-meta.xml
<ListView>
    <fullName>MTD_Support_Buckets</fullName>
    <columns>NAME</columns>
    <columns>Total_Worked_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Case_Support</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>MTD Support Buckets</label>
</ListView>