unpackaged/main/default/objects/Project__c/listViews/October_Tasks_2025.listView-meta.xml
<ListView>
    <fullName>October_Tasks_2025</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Status_Color__c</columns>
    <columns>Sponsor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Project</value>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>Release 10</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>October Tasks 2025</label>
</ListView>