unpackaged/main/default/objects/Project__c/listViews/Release_3_Feb_2025.listView-meta.xml
<ListView>
    <fullName>Release_3_Feb_2025</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>Release__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Sponsor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Project</value>
    </filters>
    <filters>
        <field>Is_Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>Release 3</value>
    </filters>
    <label>Release 3 March 2025</label>
</ListView>